--- a/Wolsvagen.html
+++ b/Wolsvagen.html
@@ -83,19 +83,19 @@
             <div class="row">           
                     <div class="col-md-4 col-sm-12 col-xl-4">
                         <div class="portfolio-container justify-content-around">                            
-                            <img style="width:103%;height:275px" src="imagenes/tcroos.png" alt="automovil" class="img-fluid">
+                            <img style="width:103%;height:275px;object-fit:cover;" src="imagenes/tcroos.png" alt="automovil" class="img-fluid">
                         </div>
                     </div>
                     
                     <div class="col-md-4 col-sm-12">
                         <div class="portfolio-container">
-                            <img style="width:100%;height:275px" src="imagenes/auto2.jpg" alt="automovil" class="img-fluid">
+                            <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/auto2.jpg" alt="automovil" class="img-fluid">
                         </div>
                     </div>
                     
                     <div class="col-md-4 col-sm-12">
                         <div class="portfolio-container justify-content-around">                            
-                            <img style="width:100%;height:275px" src="imagenes/novo-gol.jpg" alt="automovil" class="img-fluid">
+                            <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/novo-gol.jpg" alt="automovil" class="img-fluid">
                         </div>
                     </div>
             </div> <!-- final primer row fotos carros-->            
