--- a/Wolsvagen.html
+++ b/Wolsvagen.html
@@ -81,23 +81,23 @@
         <!-- Automoviles -->
         <div class="container">
             <div class="row">           
-                    <div class="col-md-4 col-sm-12 col-xl-4">
-                        <div class="portfolio-container justify-content-around">                            
-                            <img style="width:103%;height:275px;object-fit:cover;" src="imagenes/tcroos.png" alt="automovil" class="img-fluid">
-                        </div>
+                <div class="col-md-4 col-sm-12 col-xl-4">
+                    <div class="portfolio-container justify-content-around">                            
+                        <img style="width:103%;height:275px;object-fit:cover;" src="imagenes/tcroos.png" alt="automovil" class="img-fluid">
                     </div>
+                </div>
                     
-                    <div class="col-md-4 col-sm-12">
-                        <div class="portfolio-container">
-                            <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/auto2.jpg" alt="automovil" class="img-fluid">
-                        </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="portfolio-container">
+                        <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/auto2.jpg" alt="automovil" class="img-fluid">
                     </div>
+                </div>
                     
-                    <div class="col-md-4 col-sm-12">
-                        <div class="portfolio-container justify-content-around">                            
-                            <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/novo-gol.jpg" alt="automovil" class="img-fluid">
-                        </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="portfolio-container justify-content-around">                            
+                        <img style="width:100%;height:275px;object-fit:cover;" src="imagenes/novo-gol.jpg" alt="automovil" class="img-fluid">
                     </div>
+                </div>
             </div> <!-- final primer row fotos carros-->            
         </div> <!--final container fotos carros-->
 
@@ -322,20 +322,20 @@
                 </div>
                 <div class="col-md-6 topmargin-sm">
                     <div class="row">                           
-                        <form>
+                        <form action="enviar.php" method="POST">
                             <div class="form-group">
                                 <label for="usr">Nombre:</label>
-                                <input type="text" class="form-control" id="usr" name="username">
+                                <input type="text" class="form-control" name="nombre" required>
                             </div>
                             <div class="form-group">
                                 <label for="pwd">Apellido:</label>
-                                <input type="text" class="form-control" id="pwd" name="Apellido">
+                                <input type="text" class="form-control" name="apellido" required>
                             </div>
                             <div class="form-group">
                                 <label for="pwd">Email:</label>
-                                <input type="email" class="form-control" id="pwd" name="correo">
-                            </div>
-                            <button style="border:none;padding:6px;" class=" btn-danger btn-block">Enviar</button>
+                                <input type="email" class="form-control" name="correo" required>
+                            </div>                            
+                            <input type="submit" value="ENVIAR" class=" btn-danger btn-block" style="border:none;padding:6px;">
                         </form>                            
                     </div>                  
                 </div>
