cambio de imagen principal

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="col-md fondo-color">
       <div class="container">
         <div class="content-center topmargin-sm">
-          <h1 class="pt-4">Potencia e ingenieria</h1>
+          <h1 class="pt-4">Potencia e ingeniería</h1>
           <p>El sitio web oficial de Volkswagen Colombia. ¡Un VW es más que solo un automóvil! Encuentre todo sobre
             nuestros modelos, ofertas, servicios y accesorios.</p>
           <a href="#" class="btn btn-light topmargin-sm">Explorar mas..!!
@@ -74,7 +74,7 @@
         quasi pariatur vel ducimus doloremque quis. Voluptatem facere consequuntur animi perferendis?</p>
     </div>
 
-    <!-- Automoviles -->
+    <!-- Automóviles -->
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-12 col-xl-4">
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <div class="card">
-            <img class="card-img-top" src="imagenes/cara1.jpg" alt="Card image" style="width:100%"
+            <img class="card-img-top" src="imagenes/cara1.jpg" alt="Caro image" style="width:100%"
               title="Carolina Rodriguez">
             <div class="card-body">
               <h4 class="card-title text-center">Carolina Rodriguez B.</h4>
@@ -151,9 +151,9 @@
         <div class="col-md-4 col-sm-12">
           <div class="card">
             <img class="card-img-top" src="imagenes/cara2.jpg" alt="Card image" style="width:100%"
-              title="Jose Luis Martinez">
+              title="José Luis Martínez">
             <div class="card-body">
-              <h4 class="card-title text-center">Jose Luis Martinez</h4>
+              <h4 class="card-title text-center">José Luis Martínez</h4>
               <p class="card-text text-center">Ingeniero industrial</p>
               <ul class="list-inline text-center">
                 <li class="list-inline-item"></li><a href=""><i class="icon ion-logo-instagram"></i></a>
@@ -186,7 +186,7 @@
               <h2>$ 450.000 mensuales</h2>
               <h4>Si tienes puntos acumulados:</h4>
               <ul class="topmargin-xs">
-                <li>Integracion con GPS</li>
+                <li>Integración con GPS</li>
                 <li>Pagos en linea</li>
                 <li>Servicio las 24 horas del dia</li>
                 <li>Seguro 50% gratis dos meses.</li>
@@ -203,7 +203,7 @@
               <h2>$ 750.000 mensuales</h2>
               <h4>Si tienes puntos acumulados:</h4>
               <ul class="topmargin-xs">
-                <li>Integracion con GPS</li>
+                <li>Integración con GPS</li>
                 <li>Pagos en linea</li>
                 <li>Bono mensual para gasolina</li>
                 <li>Seguro 100% gratis tres meses.</li>
@@ -223,7 +223,7 @@
     <div class="container">
       <div class="content-center text2">
         <h1 style="color:#EEC650">Nuestros <strong>testimonios</strong></h1>
-        <p style="color:black">Por todo sur america y parte de europa contamos con nuestros clientes satisfechos los
+        <p style="color:black">Por todo Sur América y parte de Europa contamos con nuestros clientes satisfechos los
           cuales nos dan sus testimonios.</p>
       </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -251,7 +251,7 @@
                     <img src="imagenes/user1.png" alt="user foto" class="img-fluid">
                   </div>
                   <div class="col-md-6">
-                    <h6 class="mt-3">Catalina Hernandez</h6>
+                    <h6 class="mt-3">Catalina Hernández</h6>
                   </div>
                 </div>
               </div>
@@ -326,7 +326,7 @@
           <h3>Participa en nuestros bonos <strong>mensuales</strong>
           </h3>
           <p style="padding:12px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. In repellendus eligendi
-            mollitia voluntad, deleita id oficiá dolorem aliquam corporice quart exceptuais! Doloridas?</p>
+            mollitia voluntad, deleita id oficial dolerme apliquen corporice Quanta exceptúas! Doloridas?</p>
           <h4 class="text-primary">Fredy Colorado - Frontend Developer -</h4>
           <h5>Junio 28 / 2019</h5>
         </div>
