--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="content-center topmargin-sm">
           <h1 class="pt-4">Potencia e ingeniería</h1>
-          <p>El sitio web oficial de Volkswagen Colombia. ¡Un VW es más que solo un automóvil! Encuentre todo sobre
+          <p class="pt-4">El sitio web oficial de Volkswagen Colombia. ¡Un VW es más que solo un automóvil! Encuentre todo sobre
             nuestros modelos, ofertas, servicios y accesorios.</p>
           <a href="#" class="btn btn-light topmargin-sm">Explorar mas..!!
             <i class="icon ion-md-arrow-dropright-circle"></i>
@@ -118,11 +118,11 @@
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <div class="card">
-            <img class="card-img-top" src="imagenes/cara1.jpg" alt="Caro image" style="width:100%"
-              title="Carolina Rodriguez">
+            <img class="card-img-top" src="imagenes/cara3.jpg" alt="Caro image" style="width:100%"
+              title="Manuel Karzon">
             <div class="card-body">
-              <h4 class="card-title text-center">Carolina Rodriguez B.</h4>
-              <p class="card-text text-center">Gerente ejecutiva</p>
+              <h4 class="card-title text-center">Manuel Karzon H.</h4>
+              <p class="card-text text-center">Gerente ejecutivo</p>
               <ul class="list-inline text-center">
                 <li class="list-inline-item"></li><a href=""><i class="icon ion-logo-instagram" title="Instagram"></i></a>
                 <li class="list-inline-item"></li><a href=""><i class="icon ion-logo-twitter" title="Twitter"></i></a>
@@ -134,11 +134,11 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card">
-            <img class="card-img-top" src="imagenes/cara3.jpg" alt="Card image" style="width:100%"
-              title="Manuel Karzon">
+            <img class="card-img-top" src="imagenes/cara1.jpg" alt="Card image" style="width:100%"
+              title="Carolina Rodriguez">
             <div class="card-body">
-              <h4 class="card-title text-center">Manuel Karzon H.</h4>
-              <p class="card-text text-center">Diseñador creativo</p>
+              <h4 class="card-title text-center">Carolina Rodriguez B.</h4>
+              <p class="card-text text-center">Diseñadora creativa</p>
               <ul class="list-inline text-center">
                 <li class="list-inline-item"></li><a href=""><i class="icon ion-logo-instagram"></i></a>
                 <li class="list-inline-item"></li><a href=""><i class="icon ion-logo-twitter"></i></a>
