--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-3">
+        <ul class="navbar-nav ml-auto">
           <!-- ml-auto: menu lado derecho y mr-auto: menu lado izquierdo-->
           <li class="nav-item">
             <a class="nav-link" href="#home" id="home">Home</a>
