correcion de colores

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="col-md fondo-color">
       <div class="container">
         <div class="content-center topmargin-sm">
-          <h1 class="pt-4">Potencia e ingeniería</h1>
-          <p class="pt-4">El sitio web oficial de Volkswagen Colombia. ¡Un VW es más que solo un automóvil! Encuentre todo sobre
+          <h1>Potencia e ingeniería</h1>
+          <p>El sitio web oficial de Volkswagen Colombia. ¡Un VW es más que solo un automóvil! Encuentre todo sobre
             nuestros modelos, ofertas, servicios y accesorios.</p>
           <a href="#" class="btn btn-light topmargin-sm">Explorar mas..!!
             <i class="icon ion-md-arrow-dropright-circle"></i>
